fix: fix logo height in nav on small devices

--- a/less/nav.less
+++ b/less/nav.less
@@ -1,3 +1,12 @@
+.wy-nav-top {
+
+	& > a > * {
+		max-height: 2rem;
+		vertical-align: middle;
+	}
+
+}
+
 .subnav {
 
 	a > span {
